--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Gideão Silva <gideaoms@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.5.2"
+    "koa": "^2.5.2",
+    "koa-respond": "^1.0.1",
+    "koa-router": "^7.4.0"
   }
 }
